--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <!-- Theme initialization -->
       <script src="app.js"></script>
       <script src="controllers/main_controller.js"></script>
+      <script src="controllers/patientregistration_controller.js"></script>
   </head>
   <body ng-controller="Main_Controller">
     <div class="" ng-if="!is_loggedin">
