added login service

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <script src="app.js"></script>
       <script src="controllers/main_controller.js"></script>
       <script src="controllers/patientregistration_controller.js"></script>
+      <script src="services/loginservice.js"></script>
   </head>
   <body ng-controller="Main_Controller">
     <div class="" ng-if="!is_loggedin">
