--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <link rel="stylesheet" href="assets/css/vendor.css">
       <link rel="stylesheet" href="assets/css/app-green.css">
       <link rel="stylesheet" href="assets/css/custom.css">
-
+      <link rel="stylesheet" href="libs/plugins/datepicker/datepicker3.css">
+      <link rel="stylesheet" href="libs/plugins/daterangepicker/daterangepicker-bs3.css">
+      <link rel="stylesheet" href="libs/date-picker/angular-datepicker.min.css">
       <script src="libs/angular-1.5.0/angular.js"></script>
       <script src="libs/angular-1.5.0/angular-ui-router.js"></script>
       <script src="libs/angular-1.5.0/angular-resource.js"></script>
@@ -19,7 +21,8 @@
       <script src="libs/angular-1.5.0/ui-bootstrap.min.js"></script>
       <script src="libs/angular-1.5.0/ngStorage.min.js"></script>
       <script src="libs/angular-1.5.0/angular-cookies.js"></script>
-
+      <script src="libs/date-picker/angular-datepicker.min.js"></script>
+      <script src="libs/date-picker/moment.js"></script>
       <script src="assets/js/vendor.js"></script>
       <script src="assets/js/app.js"></script>
       <!-- Theme initialization -->
