--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <link rel="stylesheet" href="assets/css/vendor.css">
       <link rel="stylesheet" href="assets/css/app-green.css">
       <link rel="stylesheet" href="assets/css/custom.css">
-      <link rel="stylesheet" href="libs/plugins/datepicker/datepicker3.css">
+      <!-- <link rel="stylesheet" href="libs/plugins/datepicker/datepicker3.css">
       <link rel="stylesheet" href="libs/plugins/daterangepicker/daterangepicker-bs3.css">
-      <link rel="stylesheet" href="libs/date-picker/angular-datepicker.min.css">
+      <link rel="stylesheet" href="libs/date-picker/angular-datepicker.min.css"> -->
       <script src="libs/angular-1.5.0/angular.js"></script>
       <script src="libs/angular-1.5.0/angular-ui-router.js"></script>
       <script src="libs/angular-1.5.0/angular-resource.js"></script>
