--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="apple-touch-icon" href="apple-touch-icon.png">
+      <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
       <link rel="stylesheet" href="assets/css/vendor.css">
       <link rel="stylesheet" href="assets/css/app-green.css">
       <link rel="stylesheet" href="assets/css/custom.css">
+
       <!-- <link rel="stylesheet" href="libs/plugins/datepicker/datepicker3.css">
       <link rel="stylesheet" href="libs/plugins/daterangepicker/daterangepicker-bs3.css">
       <link rel="stylesheet" href="libs/date-picker/angular-datepicker.min.css"> -->
