--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <link rel="stylesheet" href="assets/css/vendor.css">
       <link rel="stylesheet" href="assets/css/app-green.css">
       <link rel="stylesheet" href="assets/css/custom.css">
+      <link rel="stylesheet" href="assets/css/ng-table.min.css">
+
 
       <!-- <link rel="stylesheet" href="libs/plugins/datepicker/datepicker3.css">
       <link rel="stylesheet" href="libs/plugins/daterangepicker/daterangepicker-bs3.css">
@@ -24,6 +26,7 @@
       <script src="libs/angular-1.5.0/ngStorage.min.js"></script>
       <script src="libs/angular-1.5.0/angular-cookies.js"></script>
       <script src="libs/date-picker/angular-datepicker.min.js"></script>
+      <script src="libs/angular-1.5.0/ng-table.min.js"></script>
       <script src="libs/date-picker/moment.js"></script>
       <script src="assets/js/vendor.js"></script>
       <script src="assets/js/app.js"></script>
