added mobile no directive

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <script src="services/loginservice.js"></script>
 
       <script src="directives/main_directive.js"></script>
+      <script src="directives/phonenumber_directive.js"></script>
   </head>
   <body ng-controller="Main_Controller" ng-init="getUserDetails()">
     <div class="" ng-if="!loggedin_success">
